--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ google-cloud-core==1.7.1
 google-cloud-firestore==2.1.3
 googleapis-common-protos==1.53.0
 grpcio==1.38.1
+gunicorn==20.1.0
 h11==0.12.0
 idna==3.2
 packaging==21.0
