--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ cachetools==4.2.2
 certifi==2021.5.30
 charset-normalizer==2.0.1
 click==8.0.1
+dialogflow-fulfillment==0.4.3
 fastapi==0.66.0
 google-api-core==1.31.0
 google-auth==1.32.1
