--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2021.5.30
 charset-normalizer==2.0.1
 click==8.0.1
 dialogflow-fulfillment==0.4.3
+et-xmlfile==1.1.0
 fastapi==0.66.0
 google-api-core==1.31.0
 google-auth==1.32.1
@@ -14,13 +15,17 @@ grpcio==1.38.1
 gunicorn==20.1.0
 h11==0.12.0
 idna==3.2
+numpy==1.21.1
+openpyxl==3.0.7
 packaging==21.0
+pandas==1.3.0
 proto-plus==1.19.0
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pydantic==1.8.2
 pyparsing==2.4.7
+python-dateutil==2.8.2
 pytz==2021.1
 requests==2.26.0
 rsa==4.7.2
