Update app.yaml and cron.yaml

--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,5 @@
 cron:
 - description: "send messages next day flow"
   url: /message/cron
-  schedule: every day 12:30
+  schedule: every 1 hour
   timezone: "Asia/Manila"
