--- a/app.yaml
+++ b/app.yaml
@@ -1,5 +1,5 @@
 runtime: python39
 entrypoint: gunicorn -w 3 -k uvicorn.workers.UvicornWorker main:app -b :8080
 instance_class: F2
-env_variables:
-  ACCESS_TOKEN: 
+includes:
+  - env_variables.yaml
