--- a/cron.yaml
+++ b/cron.yaml
@@ -1,5 +1,5 @@
 cron:
 - description: "send messages next day flow"
   url: /message/cron
-  schedule: every 1 hours
+  schedule: every 1 hours from 00:00 to 23:59
   timezone: "Asia/Manila"
